# fitgirl-ddl

./: .gitignore  Cargo.toml  README.md  min_sized.sh
.github/workflows/: build.yaml
fitgirl-ddl-cli/: Cargo.toml
fitgirl-ddl-cli/src/: args.rs  main.rs  search.rs  utils.rs
fitgirl-ddl-gui/: Cargo.toml
fitgirl-ddl-gui/src/: lib.rs  main.rs  select_box.rs  utils.rs
fitgirl-ddl-gui/src/ui/: main_model.rs  select_box.rs
fitgirl-ddl-lib/: Cargo.toml
fitgirl-ddl-lib/src/: errors.rs  lib.rs
fitgirl-ddl-lib/src/extract/: mod.rs
fitgirl-ddl-lib/src/scrape/: mod.rs
src/: errors.rs  lib.rs  main.rs
src/extract/: mod.rs
src/scrape/: mod.rs
