[workspace]
members = ["fitgirl-ddl-cli", "fitgirl-ddl-gui", "fitgirl-ddl-lib"]
resolver = "2"

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"
opt-level = "s"

[workspace.dependencies]
fitgirl-ddl-lib = { path = "./fitgirl-ddl-lib" }
nyquest-preset = { version = "0.3.0", features = ["async"] }
compio = { version = "0.16.0", default-features = false, features = [
    "runtime",
    "io-uring",
    "macros",
] }
futures-util = "0.3.31"
itertools = "0.14.0"

spdlog-rs = { version = "0.4.3", default-features = false, features = [
    "release-level-info",
] }
