[workspace]
members = ["fitgirl-ddl-cli", "fitgirl-ddl-gui", "fitgirl-ddl-lib"]
resolver = "2"

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"
opt-level = "s"

[workspace.dependencies]
scraper = { version = "0.25.0", features = ["atomic"] }
fitgirl-ddl-lib = { path = "./fitgirl-ddl-lib" }
nyquest = { version = "0.4.0", features = ["async"] }
nyquest-preset = { version = "0.4.0", features = ["async"] }
compio = { version = "0.17.0", default-features = false, features = [
    "runtime",
    "io-uring",
    "macros",
] }
futures-util = "0.3.31"
itertools = "0.14.0"

tracing = { version = "0.1.41" }
