[workspace]
members = ["fitgirl-ddl-cli", "fitgirl-ddl-gui", "fitgirl-ddl-lib"]
resolver = "2"

[profile.release]
lto = true
codegen-units = 1
panic = "unwind"
opt-level = "s"
strip = "symbols"
debug = "full"
split-debuginfo = "packed"

[workspace.dependencies]
scraper = { version = "0.27.0", features = ["atomic"] }
fitgirl-ddl-lib = { path = "./fitgirl-ddl-lib" }
compio = { version = "0.19.1", default-features = false, features = [
    "runtime",
    "io-uring",
    "macros",
] }
futures-util = "0.3.32"
itertools = "0.14.0"

wreq = { version = "6.0.0-rc", default-features = false, features = [
    "webpki-roots",
] }
wreq-util = "3.0.0-rc"

tracing = { version = "0.1.44" }
