[package]
name = "fitgirl-ddl-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "fitgirl-ddl"
path = "./src/main.rs"

[dependencies]
fitgirl-ddl-lib = { workspace = true }
compio = { workspace = true }
nyquest-preset = { workspace = true }
futures-util = { workspace = true }
itertools = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

argh = "0.1.13"
