[package]
name = "fitgirl-ddl-cli"
version = "0.2.0"
edition = "2024"

[[bin]]
name = "fitgirl-ddl"
path = "./src/main.rs"

[dependencies]
fitgirl-ddl-lib = { workspace = true }
compio = { workspace = true }
nyquest-preset = { workspace = true }
futures-util = { workspace = true }
itertools = { workspace = true }
tracing = { workspace = true }
scraper = { workspace = true }

argh = "0.1.13"
tracing-subscriber = { version = "0.3.20", default-features = false, features = [
    "env-filter",
    "std",
    "ansi",
] }
chrono = { version = "0.4.42", default-features = false, features = ["clock"] }
