[package]
name = "fitgirl-ddl-gui"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "fitgirl-ddl_gui"
path = "src/main.rs"


[dependencies]
fitgirl-ddl-lib = { workspace = true }
nyquest-preset = { workspace = true }
compio = { workspace = true, features = ["time"] }
futures-util = { workspace = true }
itertools = { workspace = true }
tracing = { workspace = true }
ahash = "0.8.12"

serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
winio = { version = "0.9.1", default-features = false, features = [
    "enable_log",
] }

tracing-subscriber = { version = "0.3.20", default-features = false, features = [
    "env-filter",
    "std",
    "fmt",
] }

[features]
default = ["gtk", "win32", "dark-mode"]
gtk = ["winio/gtk"]
qt = ["winio/qt"]
win32 = ["winio/win32"]
winui = ["winio/winui"]

dark-mode = ["winio/win32-dark-mode"]
