[package]
name = "fitgirl-ddl-lib"
version = "0.3.0"
edition = "2024"
license = "MIT"
description = "extract DDL from fitgirl-repacks.site"

[dependencies]
thiserror = "2.0.12"
url = "2.5.4"

scraper = { workspace = true }
nyquest = { workspace = true }
compio = { workspace = true, optional = true }

tokio = { version = "1", default-features = false, features = [
    "rt",
], optional = true }
serde = { version = "1.0.219", default-features = false, optional = true, features = [
    "derive",
    "std",
] }

[features]
default = ["compio"]
compio = ["dep:compio"]
tokio = ["dep:tokio"]
serde = ["dep:serde"]
