[package]
name = "fitgirl-ddl-lib"
version = "0.4.0"
edition = "2024"
license = "MIT"
description = "extract DDL from fitgirl-repacks.site"

[dependencies]
thiserror = "2.0.12"
url = "2.5.4"

scraper = { workspace = true }
tracing = { workspace = true }

wreq = { workspace = true }
wreq-util = { workspace = true }

compio = { workspace = true, optional = true }
tokio = { version = "1", default-features = false, features = [
    "rt",
], optional = true }

serde = { version = "1.0.219", default-features = false, optional = true, features = [
    "derive",
    "std",
] }
http = "1.4.2"

[features]
default = ["compio"]
compio = ["dep:compio", "wreq/compio-rt", "wreq-util/compio-rt"]
tokio = ["dep:tokio", "wreq/tokio-rt", "wreq-util/tokio-rt"]
serde = ["dep:serde"]
